--- a/.github/workflows/gcp-deploy.yml
+++ b/.github/workflows/gcp-deploy.yml
@@ -1,4 +1,3 @@
-# .github/workflows/gcp-deploy.yml
 name: Deploy to Google Cloud
 
 on:
@@ -12,12 +11,17 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
+    - name: Authenticate to Google Cloud
+      id: auth
+      uses: google-github-actions/auth@v1
+      with:
+        credentials_json: ${{ secrets.GCP_SA_KEY }}
+    
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v1
       with:
         project_id: ${{ secrets.GCP_PROJECT_ID }}
-        service_account_key: ${{ secrets.GCP_SA_KEY }}
-        
+    
     - name: Deploy to App Engine
       run: |
         # Create app.yaml file for App Engine
