--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -21,8 +21,8 @@ jobs:
         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         application_name: multi-cloud-cicd-demo
-        environment_name: production
-        region: us-east-1
+        environment_name: multi-cloud-cicd-demo-env
+        region: ap-south-1
         version_label: ${{ github.sha }}
         deployment_package: deploy.zip
         wait_for_environment_recovery: 60
