--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -1,4 +1,3 @@
-# .github/workflows/aws-deploy.yml
 name: Deploy to AWS
 
 on:
@@ -6,34 +5,43 @@ on:
     branches: [ main ]
 
 jobs:
-  init:
+  Init:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: AWS Init
         run: echo "Initializing AWS deployment..."
 
-  build:
+  Build:
     runs-on: ubuntu-latest
-    needs: init
+    needs: Init
     steps:
       - uses: actions/checkout@v3
       - name: Generate deployment package
         run: zip -r deploy.zip * -x "*.git*"
+      - name: Upload deployment package
+        uses: actions/upload-artifact@v3
+        with:
+          name: deploy-zip
+          path: deploy.zip
 
-  stage:
+  Stage:
     runs-on: ubuntu-latest
-    needs: build
+    needs: Build
     steps:
       - uses: actions/checkout@v3
       - name: AWS Stage
         run: echo "Staging AWS deployment..."
 
-  deploy:
+  Deploy:
     runs-on: ubuntu-latest
-    needs: stage
+    needs: Stage
     steps:
       - uses: actions/checkout@v3
+      - name: Download deployment package
+        uses: actions/download-artifact@v3
+        with:
+          name: deploy-zip
       - name: Deploy to Elastic Beanstalk
         uses: einaregilsson/beanstalk-deploy@v21
         with:
