--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -6,16 +6,16 @@ on:
     branches: [ main ]
 
 jobs:
-  init:
+  Init:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: Azure Init
         run: echo "Initializing Azure deployment..."
 
-  build:
+  Build:
     runs-on: ubuntu-latest
-    needs: init
+    needs: Init
     steps:
       - uses: actions/checkout@v3
       - name: Set up Node.js
@@ -25,17 +25,17 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-  stage:
+  Stage:
     runs-on: ubuntu-latest
-    needs: build
+    needs: Build
     steps:
       - uses: actions/checkout@v3
       - name: Azure Stage
         run: echo "Staging Azure deployment..."
 
-  deploy:
+  Deploy:
     runs-on: ubuntu-latest
-    needs: stage
+    needs: Stage
     steps:
       - uses: actions/checkout@v3
       - name: Deploy to Azure Web App
