--- a/.github/workflows/gcp-deploy.yml
+++ b/.github/workflows/gcp-deploy.yml
@@ -6,32 +6,32 @@ on:
     branches: [ main ]
 
 jobs:
-  init:
+  Init:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: GCP Init
         run: echo "Initializing GCP deployment..."
 
-  build:
+  Build:
     runs-on: ubuntu-latest
-    needs: init
+    needs: Init
     steps:
       - uses: actions/checkout@v3
       - name: GCP Build
         run: echo "No build step required for GCP App Engine deployment"
 
-  stage:
+  Stage:
     runs-on: ubuntu-latest
-    needs: build
+    needs: Build
     steps:
       - uses: actions/checkout@v3
       - name: GCP Stage
         run: echo "Staging GCP deployment..."
 
-  deploy:
+  Deploy:
     runs-on: ubuntu-latest
-    needs: stage
+    needs: Stage
     steps:
       - uses: actions/checkout@v3
       - name: Authenticate to Google Cloud
