--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
 	"description": "Multi-cloud CI/CD demo",
 	"main": "index.js",
 	"scripts": {
-    "start": "node index.js",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"start": "node index.js",
+		"test": "jest --coverage"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"express": "^4.21.2"
+	},
+	"devDependencies": {
+		"jest": "^29.7.0",
+		"supertest": "^7.0.0"
 	}
 }
