--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
 
 jobs:
-  SecurityCheck:
+  security_quality:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -22,30 +22,36 @@ jobs:
       - name: Run Tests with Coverage
         run: npm test -- --coverage
 
-  # SonarCloud Analysis
-  SonarCheck:
+  sonarcloud:
     runs-on: ubuntu-latest
-    needs: SecurityCheck
+    needs: security_quality
     steps:
       - uses: actions/checkout@v3
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: '22'
+
+      - name: Set up Java 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
       - name: Run SonarCloud Analysis
         uses: SonarSource/sonarcloud-github-action@v1
         with:
-          organization: ${{ secrets.SONAR_ORGANIZATION }}
-          projectKey: ${{ secrets.SONAR_PROJECT_KEY }}
-          projectName: multi-cloud-cicd-demo
+          args: >
+            -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
+            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
+            -Dsonar.projectName=multi-cloud-cicd-demo
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   Init:
     runs-on: ubuntu-latest
-    needs: SonarCheck
+    needs: sonarcloud
     steps:
       - uses: actions/checkout@v3
       - name: AWS Init
@@ -56,9 +62,9 @@ jobs:
     needs: Init
     steps:
       - uses: actions/checkout@v3
-      - name: Generate deployment package
+      - name: Generate Deployment Package
         run: zip -r deploy.zip * -x "*.git*"
-      - name: Upload deployment package
+      - name: Upload Deployment Package
         uses: actions/upload-artifact@v4
         with:
           name: deploy-zip
@@ -77,7 +83,7 @@ jobs:
     needs: Stage
     steps:
       - uses: actions/checkout@v3
-      - name: Download deployment package
+      - name: Download Deployment Package
         uses: actions/download-artifact@v4
         with:
           name: deploy-zip
