--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -25,20 +25,21 @@ jobs:
   sonarcloud:
     runs-on: ubuntu-latest
     needs: security_quality
+    env:
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
     steps:
       - uses: actions/checkout@v3
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '22'
+          node-version: '16'
 
-      - name: Set up Java 21
-        id: setup_java
+      - name: Set up Java 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: '21'
+          java-version: '17'
 
       - name: Verify Java Version
         run: java -version
@@ -46,13 +47,12 @@ jobs:
       - name: Run SonarCloud Analysis
         uses: SonarSource/sonarcloud-github-action@v1
         with:
+          entryPoint: sonar-scanner
           args: >
             -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
             -Dsonar.projectName=multi-cloud-cicd-demo
-            -Dsonar.java.jdkHome=${{ steps.setup_java.outputs.java-home }}
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+            -Dsonar.java.jdkHome=${{ env.JAVA_HOME }}
 
   Init:
     runs-on: ubuntu-latest
