--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -25,8 +25,6 @@ jobs:
   sonarcloud:
     runs-on: ubuntu-latest
     needs: security_quality
-    env:
-      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
     steps:
       - uses: actions/checkout@v3
 
@@ -44,15 +42,21 @@ jobs:
       - name: Verify Java Version
         run: java -version
 
+      - name: Download SonarScanner CLI
+        run: |
+          wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.zip
+          unzip sonar-scanner-cli-4.8.0.2856-linux.zip -d sonar-scanner
+
       - name: Run SonarCloud Analysis
-        uses: SonarSource/sonarcloud-github-action@v1
-        with:
-          entryPoint: sonar-scanner
-          args: >
-            -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
-            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
-            -Dsonar.projectName=multi-cloud-cicd-demo
-            -Dsonar.java.jdkHome=${{ env.JAVA_HOME }}
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: |
+          ./sonar-scanner/sonar-scanner-cli-4.8.0.2856-linux/bin/sonar-scanner \
+            -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }} \
+            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} \
+            -Dsonar.projectName=multi-cloud-cicd-demo \
+            -Dsonar.sources=. \
+            -Dsonar.java.jdkHome=$JAVA_HOME
 
   Init:
     runs-on: ubuntu-latest
