--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -47,17 +47,20 @@ jobs:
           wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.zip
           unzip sonar-scanner-cli-4.8.0.2856-linux.zip -d sonar-scanner
 
+      - name: List SonarScanner Directory
+        run: ls -al sonar-scanner
+        # This step is optional but helps verify the folder name
+
       - name: Run SonarCloud Analysis
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          ./sonar-scanner/sonar-scanner-cli-4.8.0.2856-linux/bin/sonar-scanner \
+          ./sonar-scanner/sonar-scanner-4.8.0.2856-linux/bin/sonar-scanner \
             -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }} \
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} \
             -Dsonar.projectName=multi-cloud-cicd-demo \
             -Dsonar.sources=. \
             -Dsonar.java.jdkHome=$JAVA_HOME
-
   Init:
     runs-on: ubuntu-latest
     needs: sonarcloud
