--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
 
 jobs:
-  security_quality:
+  SecurityQuality:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -21,49 +21,15 @@ jobs:
 
       - name: Run Tests with Coverage
         run: npm test -- --coverage
-
-  sonarcloud:
-    runs-on: ubuntu-latest
-    needs: security_quality
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16'
-
-      - name: Set up Java 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-
-      - name: Verify Java Version
-        run: java -version
-
-      - name: Download SonarScanner CLI
-        run: |
-          wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.zip
-          unzip sonar-scanner-cli-4.8.0.2856-linux.zip -d sonar-scanner
-
-      - name: List SonarScanner Directory
-        run: ls -al sonar-scanner
-        # This step is optional but helps verify the folder name
-
-      - name: Run SonarCloud Analysis
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: |
-          ./sonar-scanner/sonar-scanner-4.8.0.2856-linux/bin/sonar-scanner \
-            -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }} \
-            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} \
-            -Dsonar.projectName=multi-cloud-cicd-demo \
-            -Dsonar.sources=. \
-            -Dsonar.java.jdkHome=$JAVA_HOME
+
   Init:
     runs-on: ubuntu-latest
-    needs: sonarcloud
+    needs: SecurityQuality
     steps:
       - uses: actions/checkout@v3
       - name: AWS Init
