--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,6 +6,6 @@ sonar.sources=src
 sonar.exclusions=**/*.test.js,**/*.spec.js
 
 # Tests
-sonar.tests=tests
+sonar.tests=test
 sonar.test.inclusions=**/*.test.js,**/*.spec.js
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
