--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,11 +1,11 @@
 sonar.projectKey=MainakMukherjee01_DevOpsProj
-sonar.organization=yMainakMukherjee01
+sonar.organization=MainakMukherjee01
 
 # Sources
-sonar.sources=src
+sonar.sources=.
 sonar.exclusions=**/*.test.js,**/*.spec.js
 
 # Tests
-sonar.tests=test
+sonar.tests=.
 sonar.test.inclusions=**/*.test.js,**/*.spec.js
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
