Exclude node modules

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.organization=mainakmukherjee01
 
 # Sources
 sonar.sources=.
-sonar.exclusions=**/*.test.js,**/*.spec.js
+sonar.exclusions=**/*.test.js,**/*.spec.js,coverage/**,node_modules/**
 
 # Tests
 sonar.tests=.
