--- a/.github/workflows/docker-k8s.yml
+++ b/.github/workflows/docker-k8s.yml
@@ -5,34 +5,34 @@ on:
     branches: [ main ]
 
 jobs:
-  SecurityQuality:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0  # Needed for SonarCloud analysis
+#   SecurityQuality:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v3
+#         with:
+#           fetch-depth: 0  # Needed for SonarCloud analysis
 
-      - name: Install Dependencies
-        run: npm install
+#       - name: Install Dependencies
+#         run: npm install
 
-      - name: Run Vulnerability Scan (npm audit)
-        run: npm audit
+#       - name: Run Vulnerability Scan (npm audit)
+#         run: npm audit
 
-      - name: Run ESLint for Code Quality
-        run: npx eslint .
+#       - name: Run ESLint for Code Quality
+#         run: npx eslint .
 
-      - name: Run Tests with Coverage
-        run: npm test -- --coverage
+#       - name: Run Tests with Coverage
+#         run: npm test -- --coverage
         
-      - name: SonarCloud Scan
-        uses: sonarsource/sonarqube-scan-action@v5
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#       - name: SonarCloud Scan
+#         uses: sonarsource/sonarqube-scan-action@v5
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   Build:
     runs-on: ubuntu-latest
-    needs: SecurityQuality
+    # needs: SecurityQuality
     steps:
       - uses: actions/checkout@v3
       
