--- a/.github/workflows/docker-k8s.yml
+++ b/.github/workflows/docker-k8s.yml
@@ -59,7 +59,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-  TestK3d:
+  Deploy:
     runs-on: ubuntu-latest
     needs: Build
     steps:
@@ -100,8 +100,36 @@ jobs:
           kubectl port-forward svc/nodejs-app-service 3000:80 &
           sleep 5
           curl -s http://localhost:3000/health
-          # Add more tests as needed
       
       # Clean up
       - name: Clean up K3d cluster
         run: k3d cluster delete test-cluster
+
+  verify:
+    runs-on: ubuntu-latest
+    needs: Deploy  # This job runs after your deployment job completes
+    steps:
+      - name: Set up Kubectl
+        uses: azure/setup-kubectl@v3  # or another kubectl setup action
+        with:
+          version: '1.26.0'
+    
+      - name: Wait for Pod to be Ready
+        run: |
+          # Wait until at least one pod with label app=nodejs-app is ready (timeout after 60 seconds)
+          kubectl rollout status deployment/nodejs-app --timeout=60s
+
+      - name: Get Pod Details and Logs
+        run: |
+          # List all pods
+          kubectl get pods
+
+          # Retrieve the name of the pod with label app=nodejs-app
+          POD=$(kubectl get pods -l app=nodejs-app -o jsonpath="{.items[0].metadata.name}")
+          echo "Pod name: $POD"
+
+          # Describe the pod to see detailed status and events
+          kubectl describe pod $POD
+
+          # Output the logs of the pod
+          kubectl logs $POD
