--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,10 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nodejs-app-service
+  labels:
+    app: nodejs-app
 spec:
   selector:
     app: nodejs-app
   ports:
-  - port: 80
+  - protocol: TCP
+    port: 80
     targetPort: 3000
   type: ClusterIP
