--- a/.github/workflows/docker-k8s.yml
+++ b/.github/workflows/docker-k8s.yml
@@ -29,10 +29,8 @@ jobs:
 #         env:
 #           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 #           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
   Build:
     runs-on: ubuntu-latest
-    # needs: SecurityQuality
     steps:
       - uses: actions/checkout@v3
       
@@ -92,20 +90,9 @@ jobs:
       
       # Wait for the deployment to become ready
       - name: Wait for deployment
-        run: kubectl rollout status deployment/nodejs-app
-      
-      # Run application tests (if applicable)
-      - name: Test the application
-        run: |
-          kubectl port-forward svc/nodejs-app-service 3000:80 &
-          sleep 5
-          curl -s http://localhost:3000/health
-      
-      # Clean up
-      - name: Clean up K3d cluster
-        run: k3d cluster delete test-cluster
+        run: kubectl rollout status deployment/nodejs-app --timeout=300s
 
-  verify:
+  Verify:
     runs-on: ubuntu-latest
     needs: Deploy  # This job runs after your deployment job completes
     steps:
@@ -116,8 +103,8 @@ jobs:
     
       - name: Wait for Pod to be Ready
         run: |
-          # Wait until at least one pod with label app=nodejs-app is ready (timeout after 60 seconds)
-          kubectl rollout status deployment/nodejs-app --timeout=60s
+          # Wait until at least one pod with label app=nodejs-app is ready (timeout after 300 seconds)
+          kubectl rollout status deployment/nodejs-app --timeout=300s
 
       - name: Get Pod Details and Logs
         run: |
@@ -133,3 +120,20 @@ jobs:
 
           # Output the logs of the pod
           kubectl logs $POD
+
+  Test:
+    runs-on: ubuntu-latest
+    needs: Verify  # This job runs after the verify job completes
+    steps:
+      - uses: actions/checkout@v3
+      
+      # Run application tests (if applicable)
+      - name: Test the application
+        run: |
+          kubectl port-forward svc/nodejs-app-service 3000:80 &
+          sleep 5
+          curl -s http://localhost:3000/health
+      
+      # Clean up
+      - name: Clean up K3d cluster
+        run: k3d cluster delete test-cluster
