--- a/.github/workflows/docker-k8s.yml
+++ b/.github/workflows/docker-k8s.yml
@@ -80,17 +80,21 @@ jobs:
       # Update the image in the Kubernetes manifest
       - name: Update manifest
         run: |
+          echo "Updating Kubernetes manifest with the new image..."
           sed -i 's|IMAGE_TO_REPLACE|ghcr.io/${{ github.repository }}:${{ github.sha }}|g' k8s/deployment.yaml
+          echo "Kubernetes manifest updated successfully."
       
       # Apply the Kubernetes manifests
       - name: Deploy to K3d
         run: |
+          echo "Applying Kubernetes manifests..."
           kubectl apply -f k8s/deployment.yaml
           kubectl apply -f k8s/service.yaml
+          echo "Kubernetes manifests applied successfully."
       
       # Wait for the deployment to become ready
       - name: Wait for deployment
-        run: kubectl rollout status deployment/nodejs-app --timeout=300s
+        run: kubectl rollout status deployment/nodejs-app --timeout=30s
 
   Verify:
     runs-on: ubuntu-latest
@@ -104,7 +108,7 @@ jobs:
       - name: Wait for Pod to be Ready
         run: |
           # Wait until at least one pod with label app=nodejs-app is ready (timeout after 300 seconds)
-          kubectl rollout status deployment/nodejs-app --timeout=300s
+          kubectl rollout status deployment/nodejs-app --timeout=30s
 
       - name: Get Pod Details and Logs
         run: |
