--- a/.github/workflows/docker-k8s.yml
+++ b/.github/workflows/docker-k8s.yml
@@ -94,7 +94,11 @@ jobs:
       
       # Wait for the deployment to become ready
       - name: Wait for deployment
-        run: kubectl rollout status
+        run: |
+          kubectl get pods
+          kubectl rollout status deployment/nodejs-app --timeout=30s
+
+
 
   Verify:
     runs-on: ubuntu-latest
