--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -47,3 +47,5 @@ spec:
             periodSeconds: 10
             timeoutSeconds: 5
             failureThreshold: 3
+      imagePullSecrets:
+        - name: regcred
