node v22, exclude sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.organization=mainakmukherjee01
 
 # Sources
 sonar.sources=.
-sonar.exclusions=**/*.test.js,**/*.spec.js,coverage/**,node_modules/**
+sonar.exclusions=**/*.test.js,**/*.spec.js,coverage/**,node_modules/**,package-lock.json,*.yml,*.yaml,Dockerfile,*.properties,*.config.js,*.config
 
 # Tests
 sonar.tests=.
