--- a/.github/workflows/docker-k8s.yml
+++ b/.github/workflows/docker-k8s.yml
@@ -116,7 +116,7 @@ jobs:
 
   Test:
     runs-on: ubuntu-latest
-    needs: Verify  # This job runs after the verify job completes
+    needs: DeployVerify  # This job runs after the verify job completes
     steps:
       - uses: actions/checkout@v3
       
