--- a/.github/workflows/docker-k8s.yml
+++ b/.github/workflows/docker-k8s.yml
@@ -58,7 +58,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-  DeployVerify:
+  DeployVerifyTest:
     runs-on: ubuntu-latest
     needs: Build
     steps:
@@ -114,13 +114,6 @@ jobs:
           echo "Pod name: $POD"
           kubectl describe pod $POD
 
-  Test:
-    runs-on: ubuntu-latest
-    needs: DeployVerify  # This job runs after the verify job completes
-    steps:
-      - uses: actions/checkout@v3
-      
-      # Run application tests (if applicable)
       - name: Test the application
         run: |
           kubectl port-forward svc/nodejs-app-service 3000:80 &
@@ -133,3 +126,5 @@ jobs:
       # Clean up
       - name: Clean up K3d cluster
         run: k3d cluster delete test-cluster
+
+  
