--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -71,8 +71,8 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          application_name: multi-cloud-cicd-demo
-          environment_name: multi-cloud-cicd-demo-env
+          application_name: DevOps
+          environment_name: DevOps-env
           region: ap-south-1
           version_label: ${{ github.sha }}
           deployment_package: deploy.zip
