--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -68,4 +68,6 @@ jobs:
           publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
           package: .
       - name: Start
-        run: npm start
+        run: |
+          npm i
+          npm start
