--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install Dependencies
-        run: npm install
+        run: npm install --production
 
       - name: Run Vulnerability Scan (npm audit)
         run: npm audit
@@ -77,3 +77,5 @@ jobs:
           version_label: ${{ github.sha }}
           deployment_package: deploy.zip
           wait_for_environment_recovery: 60
+      - name: Install Dependencies
+        run: npm clean-install --omit=dev
