--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -67,7 +67,5 @@ jobs:
           app-name: ${{ secrets.AZURE_APP_NAME }}
           publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
           package: .
-      - name: Start
-        run: |
-          npm i
-          npm start
+      - name: Install Dependencies
+        run: npm clean-install --omit=dev
