--- a/package.json
+++ b/package.json
@@ -11,11 +11,8 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"express": "^4.21.2"
-	},
-	"devDependencies": {
-		"jest": "^29.7.0",
-		"supertest": "^7.0.0",
-		"express": "^4.21.2"
+		"express": "^4.18.2",
+    "jest": "^29.7.0",
+		"supertest": "^7.0.0"
 	}
 }
