--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -11,7 +11,10 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install Dependencies
-        run: npm install --production
+        run: npm install
+        
+      - name : Install express
+        run: npm install express
 
       - name: Run Vulnerability Scan (npm audit)
         run: npm audit
@@ -36,10 +39,22 @@ jobs:
       - name: AWS Init
         run: echo "Initializing AWS deployment..."
 
+      - name: Install Dependencies
+        run: npm install
+        
+      - name : Install express
+        run: npm install express
+
   Build:
     runs-on: ubuntu-latest
     needs: Init
     steps:
+      - name: Install Dependencies
+        run: npm install
+        
+      - name : Install express
+        run: npm install express
+
       - uses: actions/checkout@v3
       - name: Generate Deployment Package
         run: zip -r deploy.zip * -x "*.git*"
@@ -61,6 +76,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: Stage
     steps:
+      - name: Install Dependencies
+        run: npm install
+        
+      - name : Install express
+        run: npm install express
+
       - uses: actions/checkout@v3
       - name: Download Deployment Package
         uses: actions/download-artifact@v4
@@ -72,10 +93,14 @@ jobs:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           application_name: DevOps
-          environment_name: DevOps-env
+          environment_name: DevOps-env-1
           region: ap-south-1
           version_label: ${{ github.sha }}
           deployment_package: deploy.zip
           wait_for_environment_recovery: 60
+
       - name: Install Dependencies
-        run: npm clean-install --omit=dev
+        run: npm install
+        
+      - name : Install express
+        run: npm install express
