--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
+      - name : Install express
+        run: npm install express
+
       - name: Run Vulnerability Scan (npm audit)
         run: npm audit
 
@@ -45,8 +48,11 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '22'
-      - name: Install dependencies
+      - name: Install Dependencies
         run: npm install
+
+      - name : Install express
+        run: npm install express
 
   Stage:
     runs-on: ubuntu-latest
@@ -60,6 +66,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: Stage
     steps:
+      - name: Install Dependencies
+        run: npm install
+
+      - name : Install express
+        run: npm install express
+
       - uses: actions/checkout@v3
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
@@ -67,5 +79,9 @@ jobs:
           app-name: ${{ secrets.AZURE_APP_NAME }}
           publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
           package: .
+
       - name: Install Dependencies
-        run: npm clean-install --omit=dev
+        run: npm install
+        
+      - name : Install express
+        run: npm install express
